# FyreRenderer

./: CMakeLists.txt  library.cpp  main.cpp
Renderer/Core/: FyreRenderer.cpp  FyreRenderer.h  window.cpp  window.h
Renderer/Core/Mesh/: Mesh.cpp  Mesh.h
Renderer/Core/Shader/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw-3.3.1/libs/win32/: glfw3.lib
libs/glfw/libs/unix/: libglfw3.old
